[package]
name = "vpm"
version = "0.1.0"
edition = "2021"
authors = ["Lyceum <hewun@lyceum.cc>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
chrono = "0.4.35"
url = "2.5.0"
reqwest = { version = "0.11.25", features = ["blocking", "json"] }
serde_json = "1.0.114"
md5 = "0.7.0"
rand = "0.8.5"
base64 = "0.21.7"
quick-js = "0.4.1"
